--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -134,7 +134,6 @@
                 android:outlineAmbientShadowColor="@color/LightCoral"
                 android:paddingStart="@dimen/_20sdp"
                 android:paddingTop="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
                 android:paddingEnd="@dimen/_20sdp"
                 android:paddingBottom="@dimen/_20sdp"
                 android:layout_height="wrap_content">
@@ -176,7 +175,6 @@
                 android:outlineAmbientShadowColor="@color/LightCoral"
                 android:paddingStart="@dimen/_20sdp"
                 android:paddingTop="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
                 android:paddingEnd="@dimen/_20sdp"
                 android:paddingBottom="@dimen/_20sdp"
                 android:layout_height="wrap_content">
@@ -218,6 +216,47 @@
                 android:outlineAmbientShadowColor="@color/LightCoral"
                 android:paddingStart="@dimen/_20sdp"
                 android:paddingTop="@dimen/_10sdp"
+                android:paddingEnd="@dimen/_20sdp"
+                android:paddingBottom="@dimen/_20sdp"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:drawableStart="@drawable/books_three"
+                    android:gravity="center_vertical"
+                    android:drawablePadding="@dimen/_8sdp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/_13ssp"
+                    android:text="Số lượng sách chưa trả"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/_15ssp"
+                    android:gravity="center_horizontal"
+                    android:textColor="#F33F5A"
+                    android:text="Số sách chưa trả"
+                    />
+
+                <TextView
+                    android:id="@+id/sumStatus_ct"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/_15ssp"
+                    android:gravity="center_horizontal"
+                    android:text="800 quyển"
+                    />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:background="@drawable/chart_bg"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginEnd="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:elevation="@dimen/_90sdp"
+                android:outlineAmbientShadowColor="@color/LightCoral"
+                android:paddingStart="@dimen/_20sdp"
+                android:paddingTop="@dimen/_10sdp"
                 android:layout_marginBottom="@dimen/_10sdp"
                 android:paddingEnd="@dimen/_20sdp"
                 android:paddingBottom="@dimen/_20sdp"
@@ -229,18 +268,18 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/_13ssp"
-                    android:text="Số lượng sách chưa chả"/>
+                    android:text="Số lượng sách Tồn  kho"/>
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/_15ssp"
                     android:gravity="center_horizontal"
-                    android:textColor="#F33F5A"
-                    android:text="Số sách chưa chả"
+                    android:textColor="#00C853"
+                    android:text="Số sách tồn kho"
                     />
 
                 <TextView
-                    android:id="@+id/sumStatus_ct"
+                    android:id="@+id/sumBook_Inventory"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/_15ssp"
