--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -115,6 +115,16 @@
             android:layout_marginStart="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent" />
 
+        <View
+            android:id="@+id/color"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
+            android:layout_below="@+id/watchedBook"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="@dimen/_20sdp"
+            android:background="@drawable/backroung_orange"
+            android:layout_marginTop="@dimen/_10sdp" />
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnAddBill"
             android:layout_width="wrap_content"
